[package]
name = "absolutelyright"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "set-header"] }
chrono = "0.4"
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
